--- a/Mapplas/Mapplas/UserViewController.xib
+++ b/Mapplas/Mapplas/UserViewController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12C60</string>
-		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
+		<int key="IBDocument.SystemTarget">1536</int>
+		<string key="IBDocument.SystemVersion">12C3104</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2844</string>
 		<string key="IBDocument.AppKitVersion">1187.34</string>
 		<string key="IBDocument.HIToolboxVersion">625.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">2083</string>
+			<string key="NS.object.0">1930</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -70,7 +70,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="586141257">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="859793055">
@@ -78,7 +78,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{114, 5}, {92, 92}}</string>
 						<reference key="NSSuperview" ref="586141257"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="110862525"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -93,7 +92,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{114, 5}, {92, 92}}</string>
 						<reference key="NSSuperview" ref="586141257"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="480929129"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -129,25 +127,22 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 102}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="859793055"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="1047818088">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews"/>
 				<string key="NSFrameSize">{320, 100}</string>
-				<reference key="NSSuperview"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="108938310">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUILabel" id="416606569">
@@ -237,7 +232,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 78}</string>
-				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="416606569"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
@@ -344,7 +338,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="611795173">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIButton" id="808024115">
@@ -475,14 +469,13 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 55}</string>
-				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="808024115"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="328273835">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUILabel" id="884400685">
@@ -517,7 +510,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 78}</string>
-				<reference key="NSSuperview"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -557,7 +549,7 @@
 				<float key="IBUISectionFooterHeight">22</float>
 			</object>
 			<object class="IBUIView" id="899170563">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIButton" id="751983184">
@@ -656,7 +648,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 78}</string>
-				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="751983184"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="480929129"/>
@@ -1222,176 +1213,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">82</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">UserViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="userBlockedApps:">id</string>
-						<string key="userLogOut:">id</string>
-						<string key="userLogin:">id</string>
-						<string key="userPinnedApps:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="userBlockedApps:">
-							<string key="name">userBlockedApps:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="userLogOut:">
-							<string key="name">userLogOut:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="userLogin:">
-							<string key="name">userLogin:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="userPinnedApps:">
-							<string key="name">userPinnedApps:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="footerClearButton">UIButton</string>
-						<string key="footerClearButtonLabel">UILabel</string>
-						<string key="footerSignOutButton">UIButton</string>
-						<string key="footerSignOutButtonLabel">UILabel</string>
-						<string key="footerView">UIView</string>
-						<string key="list">UITableView</string>
-						<string key="listEmptyView">UIView</string>
-						<string key="listEmptyViewLabel">UILabel</string>
-						<string key="listHeaderBlocksButton">UIButton</string>
-						<string key="listHeaderBlocksLabel">UILabel</string>
-						<string key="listHeaderPinsButton">UIButton</string>
-						<string key="listHeaderPinsLabel">UILabel</string>
-						<string key="listHeaderView">UIView</string>
-						<string key="scroll">UIScrollView</string>
-						<string key="userImageButton">UIButton</string>
-						<string key="userImageImageView">UIImageView</string>
-						<string key="userImageView">UIView</string>
-						<string key="userInfo">UIView</string>
-						<string key="userInfoPressed">UIView</string>
-						<string key="userInfoPressedButtonOk">UIView</string>
-						<string key="userInfoPressedEmailEditText">UITextField</string>
-						<string key="userInfoPressedNameEditText">UITextField</string>
-						<string key="userInfoUnpressed">UIView</string>
-						<string key="userInfoUnpressedEmail">UILabel</string>
-						<string key="userInfoUnpressedName">UILabel</string>
-						<string key="userInfoUnpressedWarningText">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="footerClearButton">
-							<string key="name">footerClearButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="footerClearButtonLabel">
-							<string key="name">footerClearButtonLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="footerSignOutButton">
-							<string key="name">footerSignOutButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="footerSignOutButtonLabel">
-							<string key="name">footerSignOutButtonLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="footerView">
-							<string key="name">footerView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="list">
-							<string key="name">list</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listEmptyView">
-							<string key="name">listEmptyView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listEmptyViewLabel">
-							<string key="name">listEmptyViewLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderBlocksButton">
-							<string key="name">listHeaderBlocksButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderBlocksLabel">
-							<string key="name">listHeaderBlocksLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderPinsButton">
-							<string key="name">listHeaderPinsButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderPinsLabel">
-							<string key="name">listHeaderPinsLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listHeaderView">
-							<string key="name">listHeaderView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="scroll">
-							<string key="name">scroll</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userImageButton">
-							<string key="name">userImageButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userImageImageView">
-							<string key="name">userImageImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userImageView">
-							<string key="name">userImageView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfo">
-							<string key="name">userInfo</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressed">
-							<string key="name">userInfoPressed</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressedButtonOk">
-							<string key="name">userInfoPressedButtonOk</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressedEmailEditText">
-							<string key="name">userInfoPressedEmailEditText</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoPressedNameEditText">
-							<string key="name">userInfoPressedNameEditText</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressed">
-							<string key="name">userInfoUnpressed</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressedEmail">
-							<string key="name">userInfoUnpressedEmail</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressedName">
-							<string key="name">userInfoUnpressedName</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userInfoUnpressedWarningText">
-							<string key="name">userInfoUnpressedWarningText</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UserViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
@@ -1404,6 +1226,6 @@
 			<string key="ic_profile_photo_frame.png">{144, 144}</string>
 			<string key="textarea.png">{126, 66}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">2083</string>
+		<string key="IBCocoaTouchPluginVersion">1930</string>
 	</data>
 </archive>
